--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": ">=7.0.0",
         "abraham/twitteroauth": "^0.7.4",
+        "cosenary/instagram": "^2.3",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "mgp25/instagram-php": "^3.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
